[gd_scene load_steps=5 format=3 uid="uid://b3nyi5kg1v63j"]

[ext_resource type="Theme" uid="uid://cicb48pw2aaym" path="res://Themes/Default_ui.tres" id="1_fxvsg"]
[ext_resource type="Script" path="res://Scripts/level_selector.gd" id="2_gdcgl"]

[sub_resource type="InputEventAction" id="InputEventAction_mne3y"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_fx6yb"]
events = [SubResource("InputEventAction_mne3y")]

[node name="lvl_selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fxvsg")
script = ExtResource("2_gdcgl")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 9

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 976.0
offset_right = 132.0
offset_bottom = 1026.0
shortcut = SubResource("Shortcut_fx6yb")
text = "Back"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(621, 235)
dialog_text = "It seems that it is the first
 time you play, do you want
 to see the tutorial before starting?"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
